--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -42,6 +42,9 @@ jobs:
     - name: Restart docker
       run: sudo service docker restart
 
+    - name: Check docker
+      run: cat ~/.docker/config.json
+
     - name: Free up disk space complete
       run: |
         echo "Free up disk space complete"
